// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component GameCardButton renders become VIP button for non-VIP user correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "marginHorizontal": 10,
        "marginVertical": 10,
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(96,202,142,1)",
        "borderRadius": 80,
        "height": 96,
        "justifyContent": "center",
        "opacity": 1,
        "width": 280,
      }
    }
    testID="play-button"
  >
    <View
      borderRadius={40}
      colorScheme="rgba(128,229,173,1)"
      height={48}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(128,229,173,1)",
            "borderRadius": 80,
            "height": 86,
            "justifyContent": "center",
            "width": 274,
          },
        ]
      }
      width={140}
    >
      <View
        borderRadius={40}
        colorScheme="rgba(114,213,158,1)"
        height={48}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(114,213,158,1)",
              "borderRadius": 100,
              "height": 82,
              "justifyContent": "center",
              "marginTop": 8,
              "width": 274,
            },
          ]
        }
        width={140}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            alignCenter={false}
            allowFontScaling={true}
            color="#FFFFFF"
            fontFamily="MEDIUM"
            isUnderlined={false}
            isUppercase={false}
            marginTop={5}
            maxFontSizeMultiplier={1.3}
            size="SMALL"
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "Calibre-Medium",
                  "fontSize": 27,
                  "justifyContent": "center",
                  "textAlign": "left",
                  "textDecorationColor": "#FFFFFF",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
                Object {
                  "marginHorizontal": 7.5,
                  "marginTop": 10,
                },
              ]
            }
          >
            Play
          </Text>
          <Image
            marginHorizontal={5}
            resizeMode="contain"
            size={29}
            source={1}
            style={
              Array [
                Object {
                  "height": 43.5,
                  "marginHorizontal": 7.5,
                  "width": 43.5,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="BOLD"
              isUnderlined={false}
              isUppercase={false}
              marginTop={5}
              maxFontSizeMultiplier={1.3}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "CalibreBold",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 7.5,
                    "marginTop": 10,
                  },
                ]
              }
            >
              100
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component GameCardButton renders correctly isDisabled 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "marginHorizontal": 10,
        "marginVertical": 10,
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(96,202,142,1)",
        "borderRadius": 80,
        "height": 96,
        "justifyContent": "center",
        "opacity": 1,
        "width": 280,
      }
    }
    testID="play-button"
  >
    <View
      borderRadius={40}
      colorScheme="rgba(128,229,173,1)"
      height={48}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(128,229,173,1)",
            "borderRadius": 80,
            "height": 86,
            "justifyContent": "center",
            "width": 274,
          },
        ]
      }
      width={140}
    >
      <View
        borderRadius={40}
        colorScheme="rgba(114,213,158,1)"
        height={48}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(114,213,158,1)",
              "borderRadius": 100,
              "height": 82,
              "justifyContent": "center",
              "marginTop": 8,
              "width": 274,
            },
          ]
        }
        width={140}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            alignCenter={false}
            allowFontScaling={true}
            color="#FFFFFF"
            fontFamily="MEDIUM"
            isUnderlined={false}
            isUppercase={false}
            marginTop={5}
            maxFontSizeMultiplier={1.3}
            size="SMALL"
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "Calibre-Medium",
                  "fontSize": 27,
                  "justifyContent": "center",
                  "textAlign": "left",
                  "textDecorationColor": "#FFFFFF",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
                Object {
                  "marginHorizontal": 7.5,
                  "marginTop": 10,
                },
              ]
            }
          >
            Play
          </Text>
          <Image
            marginHorizontal={5}
            resizeMode="contain"
            size={29}
            source={1}
            style={
              Array [
                Object {
                  "height": 43.5,
                  "marginHorizontal": 7.5,
                  "width": 43.5,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="BOLD"
              isUnderlined={false}
              isUppercase={false}
              marginTop={5}
              maxFontSizeMultiplier={1.3}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "CalibreBold",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 7.5,
                    "marginTop": 10,
                  },
                ]
              }
            >
              100
            </Text>
            <View
              style={
                Array [
                  Object {
                    "borderBottomWidth": 3,
                    "borderColor": "#F06B59",
                    "height": 1,
                    "position": "absolute",
                    "width": "85%",
                  },
                ]
              }
              width="85%"
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "position": "absolute",
                "right": -7.5,
                "top": -50,
              },
            ]
          }
          top={-25}
        >
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginHorizontal": 10,
                  "marginVertical": 10,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(95,110,175,1)",
                  "borderRadius": 48,
                  "height": 50,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 280,
                }
              }
              testID="overlay-button"
            >
              <View
                borderRadius={24}
                colorScheme="rgba(140,158,221,1)"
                height={25}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(140,158,221,1)",
                      "borderRadius": 48,
                      "height": 40,
                      "justifyContent": "center",
                      "width": 274,
                    },
                  ]
                }
                width={140}
              >
                <View
                  borderRadius={24}
                  colorScheme="rgba(124,137,216,1)"
                  height={25}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(124,137,216,1)",
                        "borderRadius": 68,
                        "height": 36,
                        "justifyContent": "center",
                        "marginTop": 8,
                        "width": 274,
                      },
                    ]
                  }
                  width={140}
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#FFFFFF"
                    fontFamily="BOLD ITALIC"
                    isUnderlined={false}
                    isUppercase={false}
                    marginTop={2}
                    maxFontSizeMultiplier={1.3}
                    size="SMALL"
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "CalibreBoldItalic",
                          "fontSize": 27,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#FFFFFF",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "marginHorizontal": 7.5,
                          "marginTop": 4,
                        },
                      ]
                    }
                  >
                    Become a VIP
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component GameCardButton renders free button correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "marginHorizontal": 10,
        "marginVertical": 10,
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(96,202,142,1)",
        "borderRadius": 80,
        "height": 96,
        "justifyContent": "center",
        "opacity": 1,
        "width": 280,
      }
    }
    testID="play-button"
  >
    <View
      borderRadius={40}
      colorScheme="rgba(128,229,173,1)"
      height={48}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(128,229,173,1)",
            "borderRadius": 80,
            "height": 86,
            "justifyContent": "center",
            "width": 274,
          },
        ]
      }
      width={140}
    >
      <View
        borderRadius={40}
        colorScheme="rgba(114,213,158,1)"
        height={48}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(114,213,158,1)",
              "borderRadius": 100,
              "height": 82,
              "justifyContent": "center",
              "marginTop": 8,
              "width": 274,
            },
          ]
        }
        width={140}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            alignCenter={false}
            allowFontScaling={true}
            color="#FFFFFF"
            fontFamily="MEDIUM"
            isUnderlined={false}
            isUppercase={false}
            marginTop={5}
            maxFontSizeMultiplier={1.3}
            size="SMALL"
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "Calibre-Medium",
                  "fontSize": 27,
                  "justifyContent": "center",
                  "textAlign": "left",
                  "textDecorationColor": "#FFFFFF",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
                Object {
                  "marginHorizontal": 7.5,
                  "marginTop": 10,
                },
              ]
            }
          >
            Play
          </Text>
          <Image
            marginHorizontal={5}
            resizeMode="contain"
            size={29}
            source={1}
            style={
              Array [
                Object {
                  "height": 43.5,
                  "marginHorizontal": 7.5,
                  "width": 43.5,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="BOLD"
              isUnderlined={false}
              isUppercase={false}
              marginTop={5}
              maxFontSizeMultiplier={1.3}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "CalibreBold",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 7.5,
                    "marginTop": 10,
                  },
                ]
              }
            >
              100
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomWidth": 3,
                  "borderColor": "#F06B59",
                  "height": 1,
                  "position": "absolute",
                  "width": "85%",
                },
              ]
            }
            width="85%"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "position": "absolute",
                "right": -7.5,
                "top": -50,
              },
            ]
          }
          top={-25}
        >
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginHorizontal": 10,
                  "marginVertical": 10,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(197,78,62,1)",
                  "borderRadius": 80,
                  "height": 50,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 130,
                }
              }
              testID="overlay-button"
            >
              <View
                borderRadius={40}
                colorScheme="rgba(255,132,115,1)"
                height={25}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(255,132,115,1)",
                      "borderRadius": 80,
                      "height": 40,
                      "justifyContent": "center",
                      "width": 124,
                    },
                  ]
                }
                width={65}
              >
                <View
                  borderRadius={40}
                  colorScheme="rgba(240, 107, 89, 1)"
                  height={25}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(240, 107, 89, 1)",
                        "borderRadius": 100,
                        "height": 36,
                        "justifyContent": "center",
                        "marginTop": 8,
                        "width": 124,
                      },
                    ]
                  }
                  width={65}
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#FFFFFF"
                    fontFamily="BOLD ITALIC"
                    isUnderlined={false}
                    isUppercase={false}
                    marginTop={2}
                    maxFontSizeMultiplier={1.3}
                    size="SMALL"
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "CalibreBoldItalic",
                          "fontSize": 27,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#FFFFFF",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "marginHorizontal": 7.5,
                          "marginTop": 4,
                        },
                      ]
                    }
                  >
                    FREE!
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component GameCardButton renders regular button correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "marginHorizontal": 10,
        "marginVertical": 10,
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(96,202,142,1)",
        "borderRadius": 80,
        "height": 96,
        "justifyContent": "center",
        "opacity": 1,
        "width": 280,
      }
    }
    testID="play-button"
  >
    <View
      borderRadius={40}
      colorScheme="rgba(128,229,173,1)"
      height={48}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(128,229,173,1)",
            "borderRadius": 80,
            "height": 86,
            "justifyContent": "center",
            "width": 274,
          },
        ]
      }
      width={140}
    >
      <View
        borderRadius={40}
        colorScheme="rgba(114,213,158,1)"
        height={48}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(114,213,158,1)",
              "borderRadius": 100,
              "height": 82,
              "justifyContent": "center",
              "marginTop": 8,
              "width": 274,
            },
          ]
        }
        width={140}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            alignCenter={false}
            allowFontScaling={true}
            color="#FFFFFF"
            fontFamily="MEDIUM"
            isUnderlined={false}
            isUppercase={false}
            marginTop={5}
            maxFontSizeMultiplier={1.3}
            size="SMALL"
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "Calibre-Medium",
                  "fontSize": 27,
                  "justifyContent": "center",
                  "textAlign": "left",
                  "textDecorationColor": "#FFFFFF",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
                Object {
                  "marginHorizontal": 7.5,
                  "marginTop": 10,
                },
              ]
            }
          >
            Play
          </Text>
          <Image
            marginHorizontal={5}
            resizeMode="contain"
            size={29}
            source={1}
            style={
              Array [
                Object {
                  "height": 43.5,
                  "marginHorizontal": 7.5,
                  "width": 43.5,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="BOLD"
              isUnderlined={false}
              isUppercase={false}
              marginTop={5}
              maxFontSizeMultiplier={1.3}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "CalibreBold",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 7.5,
                    "marginTop": 10,
                  },
                ]
              }
            >
              100
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
